# AER_SEM_II_RPE

./: .gitignore  Cheatsheet.txt  Dockerfile  run-docker-image-gui.sh
docker-workspace/: bashrc
docker-workspace/ros_ws/: .tb_history  lab04.ops  lab04_and_12.ops  lab04rqt.ops  lab06_absolute.ops  lab06_integral.ops  lab06_offset.ops  lab06_power.ops  lab06_sin4x.ops  lab06_sum.ops  lab06rqt.ops  old.ops  test.ops
docker-workspace/ros_ws/devel/: _setup_util.py
docker-workspace/ros_ws/devel/include/sinwave/: AddTwoDataPoints.h  AddTwoDataPointsRequest.h  AddTwoDataPointsResponse.h  TimeSeriesPoint.h  WorkaroundDouble.h
docker-workspace/ros_ws/devel/lib/pkgconfig/: absolute-gnulinux.pc  absolute.pc  amplification-gnulinux.pc  amplification.pc  derivative-gnulinux.pc  derivative.pc  generator-gnulinux.pc  generator.pc  integration-gnulinux.pc  integration.pc  logger-gnulinux.pc  logger.pc  (+9 more)
docker-workspace/ros_ws/src/absolute/: CMakeLists.txt
docker-workspace/ros_ws/src/amplification/: CMakeLists.txt
docker-workspace/ros_ws/src/derivative/: CMakeLists.txt
docker-workspace/ros_ws/src/generator/: CMakeLists.txt  package.xml
docker-workspace/ros_ws/src/integration/: CMakeLists.txt  package.xml
docker-workspace/ros_ws/src/logger/: CMakeLists.txt
docker-workspace/ros_ws/src/ode_solver/: CMakeLists.txt  package.xml
docker-workspace/ros_ws/src/offset/: CMakeLists.txt
docker-workspace/ros_ws/src/power/: CMakeLists.txt  package.xml
docker-workspace/ros_ws/src/rtt_sinwave/: CMakeLists.txt  package.xml
docker-workspace/ros_ws/src/sinwave/: CMakeLists.txt
(+95 files in other folders)
